fix: bug height

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container-fluid col-12 border d-flex align-items-center" style="height: 100vh;">
+    <div class="container-fluid col-12 border d-flex align-items-center">
         <div class="container col-10">
             <div class="card m-3 shadow-lg">
                 <div class="card-header bg-primary bg-gradient">
@@ -29,8 +29,7 @@
                             </div>
                             <form action="#" method="post">
                                 <div class="mb-3">
-                                    <label for="image" class="form-label">Input image</label>
-                                    <img class="img-preview img-fluid mb-3 col-sm-10 d-block" id="imageSrc">
+                                    <img class="img-preview img-fluid mb-3 col-12" id="imageSrc">
                                     <input class="form-control" type="file" id="fileInput" name="file">
                                 </div>
                             </form>
