--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div class="mb-3">
                             
                         </div>
-                        <div class="col-md-6 col-12">
+                        <div class="col-lg-6 col-12 mb-3">
                             <div class="mb-3">
                                 <h4 class="card-title text-center">Input</h4>
                             </div>
@@ -34,7 +34,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-md-6 col-12">
+                        <div class="col-lg-6 col-12 mb-3">
                             <div class="mb-3">
                                 <h4 class="card-title text-center">Output</h4>
                             </div>
