--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                     <div class="alert alert-danger alert-dismissible fade show text-center" role="alert" id="status">
                         OpenCV.js is loading...
                     </div>
-                    <!-- <p class="text-center" id="status">OpenCV.js is loading...</p> -->
                     <div class="row">
                         <div class="mb-3">
                             
@@ -30,7 +29,7 @@
                             <form action="#" method="post">
                                 <div class="mb-3">
                                     <img class="img-preview img-fluid mb-3 col-12" id="imageSrc">
-                                    <input class="form-control" type="file" id="fileInput" name="file">
+                                    <input class="form-control" type="file" id="fileInput" name="file" accept="image/*">
                                 </div>
                             </form>
                         </div>
@@ -53,36 +52,34 @@
     imgElement.src = URL.createObjectURL(e.target.files[0]);
     }, false);
     imgElement.onload = function() {
-    let src = cv.imread(imgElement);
-    cv.cvtColor(src, src, cv.COLOR_RGBA2GRAY, 0);
-    let srcVec = new cv.MatVector();
-    srcVec.push_back(src);
-    let accumulate = false;
-    let channels = [0];
-    let histSize = [256];
-    let ranges = [0, 255];
-    let hist = new cv.Mat();
-    let mask = new cv.Mat();
-    let color = new cv.Scalar(255, 255, 255);
-    let scale = 2;
-      // You can try more different parameters
-    cv.calcHist(srcVec, channels, mask, hist, histSize, ranges, accumulate);
-    let result = cv.minMaxLoc(hist, mask);
-    let max = result.maxVal;
-    let dst = new cv.Mat.zeros(src.rows, histSize[0] * scale,
-                                cv.CV_8UC3);
-    // draw histogram
-    for (let i = 0; i < histSize[0]; i++) {
-        let binVal = hist.data32F[i] * src.rows / max;
-        let point1 = new cv.Point(i * scale, src.rows - 1);
-        let point2 = new cv.Point((i + 1) * scale - 1, src.rows - binVal);
-        cv.rectangle(dst, point1, point2, color, cv.FILLED);
-    }
-    cv.imshow('canvasOutput', dst);
-    src.delete(); dst.delete(); srcVec.delete(); mask.delete(); hist.delete();
+        let src = cv.imread(imgElement);
+        cv.cvtColor(src, src, cv.COLOR_RGBA2GRAY, 0);
+        let srcVec = new cv.MatVector();
+        srcVec.push_back(src);
+        let accumulate = false;
+        let channels = [0];
+        let histSize = [256];
+        let ranges = [0, 255];
+        let hist = new cv.Mat();
+        let mask = new cv.Mat();
+        let color = new cv.Scalar(255, 255, 255);
+        let scale = 2;
+
+        cv.calcHist(srcVec, channels, mask, hist, histSize, ranges, accumulate);
+        let result = cv.minMaxLoc(hist, mask);
+        let max = result.maxVal;
+        let dst = new cv.Mat.zeros(src.rows, histSize[0] * scale, cv.CV_8UC3);
+        // draw histogram
+        for (let i = 0; i < histSize[0]; i++) {
+            let binVal = hist.data32F[i] * src.rows / max;
+            let point1 = new cv.Point(i * scale, src.rows - 1);
+            let point2 = new cv.Point((i + 1) * scale - 1, src.rows - binVal);
+            cv.rectangle(dst, point1, point2, color, cv.FILLED);
+        }
+        cv.imshow('canvasOutput', dst);
+        src.delete(); dst.delete(); srcVec.delete(); mask.delete(); hist.delete();
     };
     var Module = {
-      // https://emscripten.org/docs/api_reference/module.html#Module.onRuntimeInitialized
         onRuntimeInitialized() {
             document.getElementById('status').innerHTML = 'OpenCV.js is ready.';
             document.getElementById('status').classList.remove('alert-danger');
